Fixed nav spacing bug

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -5,8 +5,8 @@ header {
 
   nav {
     padding: 1.45rem 2vw;
-    display: "flex";
-    justify-content: "space-between";
+    display: flex;
+    justify-content: space-between;
   }
 
   .logo {
